# sciantix-official

./: .buildinfo  .clang-format  .gitignore  2UNpython_tests.ipynb  3UNpython_tests.ipynb  AI_UN_calibration_instructions.md  Allclean  Allclean.sh  Allmake  Allmake.sh  CITATION.cff  CMakeLists.txt  CODEX_UN_M7_TASK.md  CODEX_UN_M7_V5_TASK.md  CODEX_UN_M7_V5_TASK_v2.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Doxyfile  InputReading.C  LICENSE  MDG_notes.txt  Makefile  ProcessCorrelation  README.md  ROM updates 18 October 2024.pptx  UN_Barani_model.ipynb  UN_M7_boundary_sink_diagnostics.py  UN_M7_calibration_lessons_report.md  UN_M7_codex_analysis.py  UN_M7_codex_plot_from_diagnostics.py  UN_M7_codex_plot_from_diagnostics_v2.py  UN_M7_codex_report.md  UN_M7_codex_runner.py  UN_M7_dislocation_vacancy_relaxation_diagnostics.py  UN_M7_optuna_calibration.py  UN_M7_optuna_calibration_v2.py  UN_M7_optuna_calibration_v3.py  UN_M7_optuna_calibration_v4.py  UN_M7_optuna_calibration_v5.py  (+45 more)
.doctrees/: environment.pickle  examples.doctree  index.doctree  models.doctree  overview.doctree
GPregression/: GP_util.py  MainRegression.py  XeDiffusionCoefficientOptions.txt  settings.txt  settings_check.txt
ML_models/: GBDTLog10PO2_UO2.hpp
OC/: linkoc  oc6P  oc_input.OCM  oc_output_raw.txt  ocgnu.plt  results_summary.txt
UN_M7_boundary_sink_diagnostics/: boundary_sink_scale_summary.csv  diagnostic_summary.md  diffusion_timescales.csv
UN_M7_codex_results/: capture_only_dv_profile_summary.csv  codex_final_1_best_overall_score_dv0.05_diagnostics.gp  codex_final_2_best_pressure_friendly_dv1_diagnostics.gp  codex_final_3_best_rizk_near_dv0.5_diagnostics.gp  codex_final_4_best_balanced_dv1_diagnostics.gp  codex_final_selected_candidates.csv  top_balanced_candidates.csv
UN_M7_dislocation_vacancy_relaxation_diagnostics/: candidate_parameters.csv  combo_summary.csv  diagnostic_summary.md  point_diagnostics.csv
UN_M7_global_sensitivity_fullcell/: global_fast_partial.csv  global_final_top.csv  global_sensitivity_summary.md
UN_M7_physical_sweep_outputs/: physical_fast_all.csv  physical_final_top.csv  physical_sweep_summary.md
UN_M7_physics_diagnostics/: candidate_parameters.csv  diagnostic_summary.md  point_diagnostics.csv
UN_M7_targeted_sensitivity_fullcell/: fast_results.csv  final_results.csv  summary.md
UN_M7_v5_codex_results/: WORKLOG.md  all_blocks_summary.csv  parameter_escape_summary.csv  top_by_category.csv  top_physical_candidates.csv
UN_M7_v5_rizk_base_nocodex_results/: UN_M7_v5_rizk_base_nocodex_report.md  WORKLOG.md  block_overview.csv  top50_physical_metric.csv  top_by_category.csv
UN_M7_v6_B_sensitivity_results/: B_2d_small_sensitivity.csv  B_all_sensitivity.csv  B_oat_sensitivity.csv  B_top20_sensitivity.csv
White 2001 coefficient/: White2001.xlsx  white2001.ipynb
_sources/: models.rst.txt
api/: classGas.html  classInputVariable.html  classMaterial.html  classMatrix.html  classModel.html  classSciantixArray.html  classSciantixVariable.html  classSimulation.html  classSolver.html  classSystem.html  classVariable.html  dir_include.html  dir_include_classes.html  dir_include_coupling.html  dir_include_file_manager.html  dir_include_models.html  dir_include_namespaces.html  dir_include_operations.html  file_include_MainVariables.h.html  file_include_Sciantix.h.html  file_include_classes_Gas.h.html  file_include_classes_InputVariable.h.html  file_include_classes_Material.h.html  file_include_classes_Matrix.h.html  file_include_classes_Model.h.html  file_include_classes_SciantixArray.h.html  file_include_classes_SciantixVariable.h.html  file_include_classes_Simulation.h.html  file_include_classes_Solver.h.html  file_include_classes_System.h.html  file_include_classes_Variable.h.html  file_include_coupling_TUSrcCoupling.h.html  file_include_file_manager_Initialization.h.html  file_include_file_manager_InputInterpolation.h.html  file_include_file_manager_InputReading.h.html  file_include_file_manager_TimeStepCalculation.h.html  file_include_models_GasDiffusion.h.html  file_include_models_StoichiometryDeviation.h.html  file_include_namespaces_Constants.h.html  file_include_namespaces_ErrorMessages.h.html  (+104 more)
code/: Allclean  CMakeLists.txt  README.md
context/: CONTEXT.md
docs/: Makefile  _constants_8h.html  _constants_8h_source.html  _error_messages_8h_source.html  _gas_8h_source.html  _gas_diffusion_8h_source.html  _initialization_8h_source.html  _input_interpolation_8h_source.html  _input_reading_8h_source.html  _input_variable_8h_source.html  _main_variables_8h.html  _main_variables_8h_source.html  _material_8h_source.html  _matrix_8h_source.html  _model_8h_source.html  _sciantix_8h_source.html  _sciantix_array_8h.html  _sciantix_array_8h_source.html  _sciantix_variable_8h_source.html  _set_gas_8h_source.html  _set_matrix_8h_source.html  _set_system_8h_source.html  _set_variables_8h_source.html  _set_variables_functions_8h.html  _set_variables_functions_8h_source.html  _simulation_8h_source.html  _solver_8h_source.html  _stoichiometry_deviation_8h_source.html  _system_8h_source.html  _t_u_src_coupling_8h_source.html  _time_step_calculation_8h_source.html  _variable_8h_source.html  annotated.html  class_gas.html  class_input_variable.html  class_material.html  class_matrix.html  class_model.html  class_sciantix_array.html  class_sciantix_variable.html  (+43 more)
include/: ANN_gas_production.h  Bounds.h  Burnup.h  Cesium.h  CesiumIodine.h  ConstantNumbers.h  CorrelationProcessor.h  CorrelationSelector.h  Correlations.h  Cs137_in_UO2.h  Cs_in_UO2.h  EffectiveBurnup.h  Entity.h  EnvironmentComposition.h  EquationExtractor.h  ErrorMessages.h  FiguresOfMerit.h  Gas.h  GasDeclaration.h  GasDiffusion.h  GasProduction.h  Global.h  GrainGrowth.h  (+103 more)
oxired_lib/: README.md  pyproject.toml
oxired_lib/examples/: example_usage.py  example_usage_PHENIX.py  phenix_oxygen_balance.py
oxired_lib/oxired/: __init__.py  constants.py  fission_yields.py  model.py  profiles.py
oxired_lib/oxired.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
oxired_lib/tests/: test_basic.py
(+5401 files in other folders)
