[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxired"
version = "0.1.0"
description = "Practical OXIRED solver for cylindrical oxide fuel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools]
packages = ["oxired"]
